k8s/ingress/ingress_pointing_to_main.yaml

# Ingress for Bookify main application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookify-main
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: bookify.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bookify-main-service
            port:
              number: 5000
